Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17545

Workflow issues with store and certificate password dialog in package signing.

XMLWordPrintable

      1. Multiple dialog pop-ups on incorrect password.
      2. Empty store & certificate password is allowed.
      3. Ok & Cancel have the same effect on empty password.
      4. No error message for incorrect certificate password.
      5. Null CertificatesModel warning on cancel.

        For Gerrit Dashboard: QTCREATORBUG-17545
        # Subject Branch Project Status CR V

            vikas Vikas Pachdha
            vikas Vikas Pachdha
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes