Android: Fix workflow issues in package signing password dialogs

Task-number: QTCREATORBUG-17545
Change-Id: Ide0c322a50455997c7b8fb2350dbdef1d76257c9
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>